components/odh-notebook-controller/upgrade/data/2.13.0/networkpolicy.networking.k8s.io/wb1-ctrl-np.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: "2024-10-20T17:05:55Z"
  generation: 1
  name: wb1-ctrl-np
  namespace: developer
  ownerReferences:
  - apiVersion: kubeflow.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: Notebook
    name: wb1
    uid: a6f0f961-5aaf-4146-b4de-132fba4479dd
  resourceVersion: "7173715"
  uid: c0233b78-7f91-45b0-a80d-8308c878cad9
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: redhat-ods-applications
    ports:
    - port: 8888
      protocol: TCP
  podSelector:
    matchLabels:
      notebook-name: wb1
  policyTypes:
  - Ingress
